kubernetes/cluster/extras/miniflux/miniflux.yaml
# Service: Miniflux
# Ingress: rss.brhd.io
# Label: app.kubernetes.io/name: miniflux
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: extras
  labels:
    app.kubernetes.io/name: miniflux
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: miniflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: extras
  labels:
    app.kubernetes.io/name: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: miniflux
    spec:
      restartPolicy: Always
      containers:
        - name: miniflux
          image: miniflux/miniflux:2.3.3
          resources:
            requests:
              memory: 50Mi
              cpu: 10m
            limits:
              memory: 250Mi
              cpu: 500m
          ports:
            - containerPort: 8080
