kubernetes/cluster/extras/miniflux/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: extras
  labels:
    app.kubernetes.io/name: miniflux
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: rss.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: miniflux
                port:
                  number: 80
